Fix player able to go off screen

--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -24,8 +24,6 @@ body {
 }
 canvas{
     background-color: #051e3e;
-    /* width: 100%;
-    height: 100%; */
     visibility: hidden;
     position: absolute;
     border: 1px solid white;
